Exportar usuarios a hoja de calculo

--- a/src/index.html
+++ b/src/index.html
@@ -340,6 +340,7 @@
     <script type="text/javascript" src="assets/vendor/simcir-transmitter.js"></script>
     <script type="text/javascript" src="assets/vendor/karnaughmap.js"></script>
     <script type="text/javascript" src="assets/vendor/qmc.js"></script>
+    <script type="text/javascript" src="assets/vendor/xlsx.full.min.js"></script>
 
     <!-- ##################### CUSTOM LIB ##################### -->
     <script type="text/javascript" src="assets/custom/cipressus.js"></script>
