--- a/public/index.html
+++ b/public/index.html
@@ -7,15 +7,16 @@
 
     <!-- ##################### META ##################### -->
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+    <!-- Deshabilitar cache -->
+    <meta http-equiv="cache-control" content="no-cache" />
+    <meta http-equiv="pragma" content="no-cache" />
+    <meta http-equiv="expires" content="0"/>
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    
     <meta name="msapplication-tap-highlight" content="no" />
     <meta name="description" content="Webapp Cipressus - LCMS Sistemas Digitales - Universidad Nacional el Sur" />
     <meta name="keywords" content="Cipressus, educación, diseño, circuitos lógicos, LCMS, learning, education" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!-- Deshabilitar cache -->
-    <meta http-equiv="cache-control" content="no-cache, no-store, must-revalidate" />
-    <meta http-equiv="pragma" content="no-cache" />
-    <meta http-equiv="expires" content="0" />
     <!-- Web manifest -->
     <link rel="manifest" href="manifest.json"></link>
     <!-- PWA Service Worker -->
