Cambio de curso admins

--- a/maintenance/index.html
+++ b/maintenance/index.html
@@ -26,21 +26,15 @@
 			<div class="display-table">
 				<div class="display-table-cell">
 					
-					<h1 class="title"><b>App en mantenimiento</b></h1>
-					<p class="desc font-white">En estos momentos, la web está siendo actualizada para incorporar nuevas herramientas y corregir errores. Gracias por tu paciencia!</p>	
+					<h1 class="title"><b>Gracias por usar Cipressus!</b></h1>
+					<p class="desc font-white">La web ya no se encuentra en línea. Si desea continuar utilizando este servicio, contáctese con el administrador del sitio.</p>	
 					
-					<p class="desc font-white">Estaremos disponibles en:</p>
-					<div id="normal-countdown" data-date="2020/04/13"></div>
-
-					<a class="notify-btn" href="mailto:matias.micheletto@uns.edu.ar"><b>Contactar</b></a>
+					<a class="notify-btn" href="mailto:noc@uns.edu.ar"><b>Contactar</b></a>
 
 					<ul class="social-btn">
-						<li class="list-heading">Desarrollado por</li>
+						<li class="list-heading"></li>
 						<li><a href="https://github.com/matiasmicheletto/Cipressus"><i class="ion-social-github github"></i></a></li>
-						<li><a href="http://www.diec.uns.edu.ar/rts/"><i class="ion-ios-world-outline website"></i></a></li>
-						<li><a href="https://www.linkedin.com/school/universidad-nacional-del-sur/"><i class="ion-social-linkedin linkedin"></i></a></li>
-						<li><a href="https://www.javascript.com/"><i class="ion-social-javascript javascript"></i></a></li>
-						<li><a href="https://nodejs.org/es/"><i class="ion-social-nodejs nodejs"></i></a></li>
+						<li><a href="http://www.diec.uns.edu.ar/rts/"><i class="ion-ios-world-outline website"></i></a></li>						
 					</ul>
 				</div>
 			</div>
